fix routes project and folder restructuring

--- a/src/views/animals/adoptDetail.ejs
+++ b/src/views/animals/adoptDetail.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-<%- include('partials/head') %>
+<%- include('../partials/head') %>
 
 <body>
   <header>
@@ -17,7 +17,7 @@
     <p><strong>Descripción:</strong> <%= animal.description %></p>
     <a href="/">Volver al inicio</a>
   </main>
-  <%- include('partials/footer') %>
+  <%- include('../partials/footer') %>
 
 </body>
 
