--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,14 +1,14 @@
 <header class="main-header">
     <div class="container-nav">
       <div class="logo-container">
-        <a class="navbar-logo" href="/views/index.html">
+        <a class="navbar-logo" href="/">
           <img src="/images/huellitas_en_casa-logo.png" class="logo-nav" alt="logo-huellitas" />
         </a>
       </div>
       <nav>
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-lista">
           <li class="nav-item">
-            <a class="nav-link active" href="/views/aboutUs.ejs">
+            <a class="nav-link active" href="/aboutUs">
               <i class="fa-solid fa-paw"></i> Acerca de
             </a>
           </li>
@@ -18,22 +18,22 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/views/adoptStories.ejs">
+            <a class="nav-link" href="/adoptions/adoptStories">
               <i class="fa-solid fa-paw"></i> Historias
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/views/preAdopt.ejs">
+            <a class="nav-link" href="/adoptions/preAdopt.ejs">
               <i class="fa-solid fa-paw"></i>  Formulario de pre-adopción
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./register.ejs">
+            <a class="nav-link" href="/users/register">
               <i class="fa-regular fa-circle-user"></i> Registrate
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./login.ejs">
+            <a class="nav-link" href="/users/login">
               <i class="fa-solid fa-right-to-bracket"></i> Inicia sesión
             </a>
           </li>
