--- a/src/views/animals/adoptStories.ejs
+++ b/src/views/animals/adoptStories.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <%- include('partials/head') %>
+  <%- include('../partials/head') %>
 <body class="container">
-  <%- include('partials/header') %>
+  <%- include('../partials/header') %>
   <main>
     <section id="adopted-container">
       <h2 id="titulo-container">Historias de Adopción</h2>
@@ -11,7 +11,7 @@
       corazón. Algunos fueron felizmente adoptados, otros ya son estrellitas y otros todavía esperan una familia.</p>
       <div class="animales animal-list">
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-08 a las 22.19.38_fa949b09.png.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-08 a las 22.19.38_fa949b09.png.jpg"
             alt="img-cachorro-con-manchas" class="pets" />
           <div class="card-animal">
             <h3 class="title">Lupine</h3>
@@ -25,7 +25,7 @@
         </article>
 
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-07 a las 20.41.57_2cacab23.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-07 a las 20.41.57_2cacab23.jpg"
             alt="img-gatito-blanco-negro" class="pets" />
           <div class="card-animal">
             <h3>Romeo </h3>
@@ -41,7 +41,7 @@
         </article>
 
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-08 a las 13.57.46_5899c051.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-08 a las 13.57.46_5899c051.jpg"
             alt="img-perrito-naranja-cachorro" class="pets" />
           <div class="card-animal">
             <h3>Simba</h3>
@@ -56,7 +56,7 @@
         </article>
 
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2024-12-25 a las 00.50.26_4b72ea8a.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2024-12-25 a las 00.50.26_4b72ea8a.jpg"
             alt="img-perrita-blanca-ynegra" class="pets" />
           <div class="card-animal">
             <h3>Calliope</h3>
@@ -68,7 +68,7 @@
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_fc786793.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_fc786793.jpg"
             alt="img-blanco-naranja-cachorro" class="pets" />
           <div class="card-animal">
             <h3>Yago</h3>
@@ -80,7 +80,7 @@
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_fd7fc486.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_fd7fc486.jpg"
             alt="img-gato-gris-adulto" class="pets" />
           <div class="card-animal">
             <h3>Camacho</h3>
@@ -92,7 +92,7 @@
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_f1069759.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_f1069759.jpg"
             alt="img-cachorra-naranja" class="pets" />
           <div class="card-animal">
             <h3>Samira</h3>
@@ -104,7 +104,7 @@
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.06_200fc2bd.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.06_200fc2bd.jpg"
             alt="img-gato-blanco-adulto" class="pets" />
           <div class="card-animal">
             <h3>Snow</h3>
@@ -116,7 +116,7 @@
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.47.44_2dba7572.jpg"
+          <img src="/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.47.44_2dba7572.jpg"
             alt="img-gato-naranja-adulto" class="pets" />
           <div class="card-animal">
             <h3>Calliope</h3>
@@ -128,7 +128,7 @@
           </div>
         </article>
   </main>
-  <%- include('partials/footer') %>
+  <%- include('../partials/footer') %>
 
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
