--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -25,192 +25,26 @@
       <h2 id="titulo-container">Animales en Adopción</h2>
       <div class="animales animal-list">
         <article class="animal">
-          <img src="/images/aragorn-adopcion.jpg" alt="img-perro-marron-adulto" class="pets" />
+          <% animals.forEach(({id,name, sex, age, zone, description, image})=> { %>
+          <img src="<%= image %>" alt="img-animal" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
               <a class="nav-link" href="/views/preAdopt.ejs">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
-            <h3>Aragorn</h3>
+            <h3><%= name %></h3>
             <h4>Adopción responsable</h4>
             <div class="descripcion-animal">
-              <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad : 4 años aprox.</p>
-              <p class="zona">Zona : Lanús</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=1'">
-                <i class="fa-solid fa-bone"></i> Leer más
+              <p class="sexo">Sexo: <%= sex %></p>
+              <p class="edad">Edad : <%= age %></p>
+              <p class="zona">Zona : <%= zone %></p>
+              <button>
+                <a href="/adoptions/adoptDetail/<%= id %>"><i class="fa-solid fa-bone"></i> Leer más</a>
               </button>
             </div>
           </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/dooku-adopcion.jpg" alt="img-gatito-naranja-cachorro" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Dooku</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad : 3 meses .</p>
-              <p class="zona">Zona : Pilar</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=2'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/boromir-adopcion.jpg" alt="img-perro-atigrado-cachorro" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Boromir</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad : 2 meses .</p>
-              <p class="zona">Zona : Quilmes</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=3'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/galadriel-adopcion.jpeg" alt="img-gata-tricolor-cachorra" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Gala (Galadriel)</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Hembra</p>
-              <p class="edad">Edad : 1 año.</p>
-              <p class="zona">Zona : Polvorines</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=4'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/gandalf-adopcion.jpg" alt="img-perra-blanca-y-negra-cachorra" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Gandalf</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad : 5 años.</p>
-              <p class="zona">Zona : Berazategui</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=5'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/guts-adopcion.jpg" alt="img-gatito-naranja-cachorro" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Guts</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad: 6 meses .</p>
-              <p class="zona">Zona: Pilar</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=6'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/legolas-adopcion.jpg" alt="img-perro-naranja-adulto" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Legolas</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Macho</p>
-              <p class="edad">Edad: 3 años .</p>
-              <p class="zona">Zona: Hurlingham</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=7'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/nessa-adopcion.jpg" alt="img-perra-blanca-y-negra-cachorra" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Nessa</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Hembra</p>
-              <p class="edad">Edad : 8 meses .</p>
-              <p class="zona">Zona : William Morris</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=8'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
-        </article>
-
-        <article class="animal">
-          <img src="/images/padme-adopcion.jpeg" alt="img-gata-carey-cachorra" class="pets" />
-          <div class="detalles-animal">
-            <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
-                <i class="fa-solid fa-heart"></i> Adoptar
-              </a>
-            </li>
-            <h3>Padme</h3>
-            <h4>Adopción responsable</h4>
-            <div class="descripcion-animal">
-              <p class="sexo">Sexo: Hembra</p>
-              <p class="edad">Edad : 1 año .</p>
-              <p class="zona">Zona : Devoto</p>
-              <button onclick="location.href='/adoption/adoptDetail?id=9'">
-                <i class="fa-solid fa-bone"></i> Leer más
-              </button>
-            </div>
-          </div>
+          <% }) %>
         </article>
       </div>
     </section>
