Cambios en el formato de imagenes y agregue animals adoptados al json

--- a/src/views/animals/adoptStories.ejs
+++ b/src/views/animals/adoptStories.ejs
@@ -11,7 +11,7 @@
       corazón. Algunos fueron felizmente adoptados, otros ya son estrellitas y otros todavía esperan una familia.</p>
       <div class="animales animal-list">
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-08 a las 22.19.38_fa949b09.png.jpg"
+          <img src="/images/adoptados/Lupine-adopcion.png.jpg"
             alt="img-cachorro-con-manchas" class="pets" />
           <div class="card-animal">
             <h3 class="title">Lupine</h3>
@@ -25,7 +25,7 @@
         </article>
 
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-07 a las 20.41.57_2cacab23.jpg"
+          <img src="../public/images/adoptados/romeo-adopcion.jpg"
             alt="img-gatito-blanco-negro" class="pets" />
           <div class="card-animal">
             <h3>Romeo </h3>
@@ -41,7 +41,7 @@
         </article>
 
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-08 a las 13.57.46_5899c051.jpg"
+          <img src="../public/images/adoptados/simba-adopcion.jpg"
             alt="img-perrito-naranja-cachorro" class="pets" />
           <div class="card-animal">
             <h3>Simba</h3>
@@ -56,73 +56,86 @@
         </article>
 
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2024-12-25 a las 00.50.26_4b72ea8a.jpg"
+          <img src="../public/images/adoptados/Calliope-adopcion.jpg"
             alt="img-perrita-blanca-ynegra" class="pets" />
           <div class="card-animal">
             <h3>Calliope</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-
+              Mi nombre es Calliope pero mi familia me dice callie , fui rescatada siendo una bebe en la  calle con hambre y con mucho miedo .<br>
+              El refugio de dio mucho amor y todos se enamoraron de mi por lo regalona y juguetona que soy .<br>
+              La familia que me adopto me trata como una reina junto ami hermana gatuna India y mi hermano Cocon , soy muy feliz con ellos.
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_fc786793.jpg"
+          <img src="../public/images/adoptados/yago-adopcion.jpg"
             alt="img-blanco-naranja-cachorro" class="pets" />
           <div class="card-animal">
             <h3>Yago</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-
+              Soy Yago mis hermanitos y yo fuimos rescatados de una familia que no nos querian , llegamos a Huellitas<br>
+              donde nos dieron  mucho amor y cuidados , mi mama humana Sol me adopto y me dio una hermosa familia y mis hermanitos<br>
+              tambien fueron adoptados y todos tuvimos nuestro final feliz .
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_fd7fc486.jpg"
+          <img src="../public/images/adoptados/camacho-adopcion.jpg"
             alt="img-gato-gris-adulto" class="pets" />
           <div class="card-animal">
             <h3>Camacho</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-
+              Soy camacho y tengo 4 años , era el consentido en el refugio donde llegue un tiempo atras por heridas que me genero la mordida de un perro<br>
+              aunque encontrar una familia fue dificil ya que soy un gato adulto llegaron mis humanos Tomas y Santi<br>
+              que vieron en mi un compañero fiel y cariñoso para escribir una nueva historia juntos
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.05_f1069759.jpg"
+          <img src="../public/images/adoptados/samira-adopcion.jpg"
             alt="img-cachorra-naranja" class="pets" />
           <div class="card-animal">
             <h3>Samira</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-
+              Hola soy Samira , llegue al refugio en invierno con solo 3 meses , tenia miedo y estaba solita en la noche fria<br>
+              el refugio fue mi lugar seguro despues de pasar por los todos los cuidados a los pocos meses conoci a mi familia que se enamoraron de mi<br>
+              por que mi mama Humana Estela me conto que vio algo especial y me adopto , tambien tengo hermanos <br>
+              humanos con los que juego todo el dia y somos felices juntos . 
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.29.06_200fc2bd.jpg"
+          <img src="../public/images/adoptados/snow-adopcion.jpg"
             alt="img-gato-blanco-adulto" class="pets" />
           <div class="card-animal">
             <h3>Snow</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-
+              Soy Snow tranquilo , timido pero muy amoroso cuando me conoces , llegue al refugio con una herida en mi pata<br>
+              los cuidados y el amor de los voluntarios me ayudaron a sanar y Rebeca mi humana una estudiante veterinaria  <br>
+              me vio y me quiso con ella ya que compartimos la misma tranquilidad . Hoy soy muy feliz con ella y por esta nueva vida que tenemos juntos.
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
         </article>
         <article class="animal">
-          <img src="../public/images/adoptados/Imagen de WhatsApp 2025-01-09 a las 00.47.44_2dba7572.jpg"
+          <img src="../public/images/adoptados/fredie-adopcion.jpg"
             alt="img-gato-naranja-adulto" class="pets" />
           <div class="card-animal">
-            <h3>Calliope</h3>
+            <h3>Fredie</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-
+              Soy Fredie Hoy hace 2 años que me adptaron en una super familia donde tengo hermanos humanos y un hermano perro , conejo y una tortuga<br>
+              todos somos muy unidos y jugamos todo el dia , menos la tortuga cleo que muerde mi cola , pero <br>
+              me encanta mi familia juntos somos mas fuertes y felices.
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
