actualización de retro.md final sprint3

--- a/src/views/animals/adoptStories.ejs
+++ b/src/views/animals/adoptStories.ejs
@@ -5,21 +5,22 @@
   <%- include('../partials/header') %>
   <main>
     <section id="adopted-container">
+      
       <h2 id="titulo-container">Historias de Adopción</h2>
       <p class="description-history">Aca vas a encontrar las mas hermosas historias de nuestros amiguitos de cuatro patas.<br>
         Algunos han tenido una vida muy dura, pero por suerte, se han cruzado en su camino personas de gran<br>
       corazón. Algunos fueron felizmente adoptados, otros ya son estrellitas y otros todavía esperan una familia.</p>
       <div class="animales animal-list">
         <article class="animal">
-          <img src="/images/adoptados/Lupine-adopcion.png.jpg"
+          <img src="/images/adoptados/Lupine-adopcion.jpg"
             alt="img-cachorro-con-manchas" class="pets" />
           <div class="card-animal">
             <h3 class="title">Lupine</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
               Hola, mi nombre es Lupi y fui adoptado un 21 de septiembre, cuando era solo un bebito. 🧡
-              Mi mamá humana, Rosa, compartía su vida con un perrito que lamentablemente falleció a causa de una
-              enfermedad 😔...<a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+              Mi mamá humana, Rosa, compartía su vida con un perrito que lamentablemente falleció a causa de una enfermedad
+              . Siempre lo recuerda y  me habla de el  pero esta preparada para comenzar una nueva historia juntos<a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
         </article>
@@ -34,7 +35,7 @@
               Hola soy Romeo , feliz fui adoptado de bebe  por una familia pero esa alegria no duraria mucho , todo iba muy bien pero en alguna<br>
               parte de mi dia a dia con ellos hice algo que no les gusto , o rasque el sillón y se molestaron pero un dia <br>
               me econtre solo , con miedo y en un lugar que no conocia . Llegue al refugio pero rapido me adapte a mis amigos felinos <br>
-              En febrero
+              En febrero hace 1 año que me adopto mi humano y mi historia ahora es otra ahora somos muy felices juntos
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
           </div>
@@ -91,7 +92,7 @@
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
               Soy camacho y tengo 4 años , era el consentido en el refugio donde llegue un tiempo atras por heridas que me genero la mordida de un perro<br>
-              aunque encontrar una familia fue dificil ya que soy un gato adulto llegaron mis humanos Tomas y Santi<br>
+              aunque encontrar una familia fue dificil ya que soy un gato adulto llegaron mis humanos  y Santi<br>
               que vieron en mi un compañero fiel y cariñoso para escribir una nueva historia juntos
               <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
             </div>
