--- a/src/views/animals/adoptStories.ejs
+++ b/src/views/animals/adoptStories.ejs
@@ -6,20 +6,19 @@
   <main>
     <section id="adopted-container">
       <h2 id="titulo-container">Historias de Adopción</h2>
-      <p class="description-history">Aca vas a encontrar las mas hermosas historias de nuestros amiguitos de cuatro patas.<br>
-        Algunos han tenido una vida muy dura, pero por suerte, se han cruzado en su camino personas de gran<br>
+      <p class="description-history">Aca vas a encontrar las mas hermosas historias de nuestros amiguitos de cuatro patas.
+        Algunos han tenido una vida muy dura, pero por suerte, se han cruzado en su camino personas de gran
       corazón. Algunos fueron felizmente adoptados, otros ya son estrellitas y otros todavía esperan una familia.</p>
       <div class="animales animal-list">
         <article class="animal">
-          <img src="/images/adoptados/Lupine-adopcion.png.jpg"
+          <img src="/images/adoptados/lupine-adopcion.jpg"
             alt="img-cachorro-con-manchas" class="pets" />
           <div class="card-animal">
             <h3 class="title">Lupine</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Hola, mi nombre es Lupi y fui adoptado un 21 de septiembre, cuando era solo un bebito. 🧡
-              Mi mamá humana, Rosa, compartía su vida con un perrito que lamentablemente falleció a causa de una
-              enfermedad 😔...<a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+                Hola, mi nombre es Lupine y fui adoptado el 21 de septiembre cuando era solo un cachorrito. 🧡
+                Mi mamá humana, Rosa, había perdido a su perrito anterior debido a una enfermedad 😔. Cuando supo que estaba en adopción, se puso muy contenta. El mismo día que me rescataron, vino a buscarme, y desde entonces somos muy felices juntos.
             </div>
           </div>
         </article>
@@ -31,11 +30,8 @@
             <h3>Romeo </h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Hola soy Romeo , feliz fui adoptado de bebe  por una familia pero esa alegria no duraria mucho , todo iba muy bien pero en alguna<br>
-              parte de mi dia a dia con ellos hice algo que no les gusto , o rasque el sillón y se molestaron pero un dia <br>
-              me econtre solo , con miedo y en un lugar que no conocia . Llegue al refugio pero rapido me adapte a mis amigos felinos <br>
-              En febrero
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+
+                Hola, soy Romeo. Fui felizmente adoptado cuando era un bebé por una familia, pero esa alegría no duró mucho. Todo iba bien, pero en algún momento hice algo que no les gustó, tal vez rasqué el sillón y se molestaron. Un día, me encontré solo, con miedo y en un lugar que no conocía. Llegué al refugio, pero rápidamente me adapté a mis amigos felinos. Afortunadamente, una nueva familia me encontró y me dio una segunda oportunidad. Ahora vivo felizmente con ellos, rodeado de amor y cuidados.
             </div>
           </div>
         </article>
@@ -47,10 +43,8 @@
             <h3>Simba</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Hola soy Simba y llegue al refugio En condiciones desastrosas , piel lastimada , hambre y mucho tiempo solo en pleno invierno .<br>
-              En el refugio me dieron atención veterinaria y con mucha paciencia y amor fui confiando de nuevo en los humanos , no todos podian ser iguales<br>
-              Hoy tengo una familia  y soy muy feliz con ellos Amo dormir en la cama con mi papá y pasar tiempo en el jardín.<br>
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+                Hola, soy Simba. Llegué al refugio en condiciones desastrosas, con la piel lastimada, hambriento y habiendo pasado mucho tiempo solo en pleno invierno. En el refugio me dieron atención veterinaria y, con mucha paciencia y amor, volví a confiar en los humanos. No todos podían ser iguales a los que me abandonaron. Ahora tengo una familia que me cuida y me quiere. Me encanta dormir en la cama con mi papá y disfrutar del jardín. Cada día es una nueva aventura llena de amor y alegría.
+              
             </div>
           </div>
         </article>
@@ -62,10 +56,8 @@
             <h3>Calliope</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Mi nombre es Calliope pero mi familia me dice callie , fui rescatada siendo una bebe en la  calle con hambre y con mucho miedo .<br>
-              El refugio de dio mucho amor y todos se enamoraron de mi por lo regalona y juguetona que soy .<br>
-              La familia que me adopto me trata como una reina junto ami hermana gatuna India y mi hermano Cocon , soy muy feliz con ellos.
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+                Mi nombre es Calliope, pero mi familia me dice Callie. Fui rescatada siendo una bebé en la calle, con hambre y mucho miedo. En el refugio me dieron mucho amor y todos se enamoraron de mí por lo regalona y juguetona que soy. La familia que me adoptó me trata como una reina junto a mi hermana gatuna India y mi hermano Cocon. Disfruto cada día con ellos.
+              
             </div>
           </div>
         </article>
@@ -76,10 +68,8 @@
             <h3>Yago</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Soy Yago mis hermanitos y yo fuimos rescatados de una familia que no nos querian , llegamos a Huellitas<br>
-              donde nos dieron  mucho amor y cuidados , mi mama humana Sol me adopto y me dio una hermosa familia y mis hermanitos<br>
-              tambien fueron adoptados y todos tuvimos nuestro final feliz .
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+              Soy Yago. Mis hermanitos y yo fuimos rescatados de una familia que no nos quería. Llegamos a Huellitas, donde nos dieron mucho amor y cuidados. Mi mamá humana, Sol, me adoptó y me dio una hermosa familia. Mis hermanitos también fueron adoptados por familias amorosas. Ahora disfruto de una vida llena de juegos, cariño y aventuras. Me encanta correr por el jardín y dormir en el sofá con mi mamá. Cada día es una nueva oportunidad para ser feliz y estoy agradecido por la segunda oportunidad que me dieron.
+
             </div>
           </div>
         </article>
@@ -90,10 +80,11 @@
             <h3>Camacho</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Soy camacho y tengo 4 años , era el consentido en el refugio donde llegue un tiempo atras por heridas que me genero la mordida de un perro<br>
-              aunque encontrar una familia fue dificil ya que soy un gato adulto llegaron mis humanos Tomas y Santi<br>
-              que vieron en mi un compañero fiel y cariñoso para escribir una nueva historia juntos
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+
+                Soy Camacho y tengo 4 años. Era el consentido en el refugio donde llegué un tiempo atrás por heridas que me generó la mordida de un perro. Aunque encontrar una familia fue difícil ya que soy un gato adulto, llegaron mis humanos, Tomás y Santi, que vieron en mí un compañero fiel y cariñoso para escribir una nueva historia juntos. 
+
+                Al principio, estaba un poco asustado y desconfiado, pero con el tiempo, Tomás y Santi me demostraron que podía confiar en ellos. Me dieron un hogar lleno de amor y cuidados. Ahora, disfruto de una vida tranquila y feliz, rodeado de amor y cariño. 
+              
             </div>
           </div>
         </article>
@@ -104,11 +95,9 @@
             <h3>Samira</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Hola soy Samira , llegue al refugio en invierno con solo 3 meses , tenia miedo y estaba solita en la noche fria<br>
-              el refugio fue mi lugar seguro despues de pasar por los todos los cuidados a los pocos meses conoci a mi familia que se enamoraron de mi<br>
-              por que mi mama Humana Estela me conto que vio algo especial y me adopto , tambien tengo hermanos <br>
-              humanos con los que juego todo el dia y somos felices juntos . 
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+
+                Hola, soy Samira. Llegué al refugio en invierno cuando tenía solo 3 meses. Tenía miedo y estaba solita en la fría noche. El refugio se convirtió en mi lugar seguro, donde recibí todos los cuidados necesarios. A los pocos meses, conocí a mi familia, quienes se enamoraron de mí. Mi mamá humana, Estela, me contó que vio algo especial en mí y decidió adoptarme. Ahora tengo hermanos humanos con los que juego todo el día y somos muy felices juntos.
+              
             </div>
           </div>
         </article>
@@ -119,10 +108,9 @@
             <h3>Snow</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Soy Snow tranquilo , timido pero muy amoroso cuando me conoces , llegue al refugio con una herida en mi pata<br>
-              los cuidados y el amor de los voluntarios me ayudaron a sanar y Rebeca mi humana una estudiante veterinaria  <br>
-              me vio y me quiso con ella ya que compartimos la misma tranquilidad . Hoy soy muy feliz con ella y por esta nueva vida que tenemos juntos.
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+
+                Soy Snow, un gato tranquilo y tímido, pero muy amoroso una vez que me conoces. Llegué al refugio con una herida en mi pata, y gracias a los cuidados y el amor de los voluntarios, logré sanar. Un día, Rebeca, una estudiante de veterinaria, me vio y decidió adoptarme. Compartimos una conexión especial debido a nuestra naturaleza tranquila. Ahora vivo felizmente con Rebeca.
+              
             </div>
           </div>
         </article>
@@ -133,10 +121,9 @@
             <h3>Fredie</h3>
             <h4>Conoce mi historia</h4>
             <div class="descripcion-animal">
-              Soy Fredie Hoy hace 2 años que me adptaron en una super familia donde tengo hermanos humanos y un hermano perro , conejo y una tortuga<br>
-              todos somos muy unidos y jugamos todo el dia , menos la tortuga cleo que muerde mi cola , pero <br>
-              me encanta mi familia juntos somos mas fuertes y felices.
-              <a href="#" class="read-more">Leer más <i class="fa-solid fa-bone"></i></a>
+
+                Soy Fredie. Hoy hace 2 años que me adoptaron en una super familia donde tengo hermanos humanos y un hermano perro, un conejo y una tortuga. Todos somos muy unidos y jugamos todo el día, menos la tortuga Cleo que muerde mi cola. A pesar de eso, me encanta mi familia. Juntos disfrutamos de cada momento y compartimos muchas aventuras.
+              
             </div>
           </div>
         </article>
