--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -26,17 +26,18 @@
       <h1>¡Que bueno verte por acá!</h1>
       <p>Inicia sesión para acceder a tu perfil, ver tus fotos y descubrir nuevas formas de cuidar a tu mascota.</p>
   </div>
-    <div class="caja-formulario">
-      <div form="formulario">
-        <label for="Email">Email:</label><br>
-        <input type="email" name="Email" id="email" placeholder="Email"><br>
-        <label for="password">Contraseña</label><br>
-        <input class="formulario-input" type="password" placeholder="Contraseña"><br>
-      </div>
-      <form>
-        <button class="boton-enviar" type="submit">Iniciar sesión</button>
-      </form>
+  <div class="caja-formulario">
+    <div form="formulario">
+      <label for="Email">Email:</label><br>
+      <input type="email" name="email" id="email" placeholder="Email"><br>
+      <label for="password">Contraseña</label><br>
+      <input class="formulario-input" type="password" name="password" placeholder="Contraseña"><br>
     </div>
+    <form action="/users/login" method="POST"> <!-- Agregado action y method -->
+      <button class="boton-enviar" type="submit">Iniciar sesión</button>
+    </form>
+  </div>
+    
     <div class="olvido-contrasena">
       ¿Olvidaste tu contraseña? <button class="click">Click acá</button>
   </div>
