fix huellitas en casa

--- a/src/views/animals/adoptDetail.ejs
+++ b/src/views/animals/adoptDetail.ejs
@@ -4,6 +4,7 @@
 <%- include('../partials/head') %>
 
 <body>
+  <%- include('../partials/header') %>
   <header>
     <h1>Detalles de <%= animal.name%></h1>
   </header>
