agregando cambios y correcciones del sp5

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -29,7 +29,7 @@
           <img src="<%= image %>" alt="img-animal" class="pets" />
           <div class="detalles-animal">
             <li class="nav-item">
-              <a class="nav-link" href="/views/preAdopt.ejs">
+              <a class="nav-link" href="/adoptions/preAdopt">
                 <i class="fa-solid fa-heart"></i> Adoptar
               </a>
             </li>
