--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -23,7 +23,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/users/preAdopt">
+            <a class="nav-link" href="/users/index">
               <i class="fa-solid fa-paw"></i>  Formulario de pre-adopción
             </a>
           </li>
