--- a/src/views/animals/preAdopt.ejs
+++ b/src/views/animals/preAdopt.ejs
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="es-AR">
 
-<%- include ('../partials/head') %>
-
+<!-- <%- include ('../partials/head') %> -->
+<head>
+  <%- include ('../partials/head') %>
+  <!-- <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoYz1HIcje39Wm4jDKdf19U8gI4UOzvEnJmZQ5stwEULTy" 
+    crossorigin="anonymous" /> -->
+</head>
 <body>
   <%- include ('../partials/header') %>
   <!-- Formulario de pre-adopción -->
   <main class="formulario">
     <h2>¡Formulario pre-adopción!</h2>
+    <form action="/animals/preAdopt" method="POST">
     <label for="personaje">¿A quién te gustaría adoptar?</label>
     <select id="personaje" name="personaje">
       <option value="Aragorn">Aragorn</option>
@@ -29,9 +37,10 @@
     <label for="Domicilio">Dirección:</label>
     <input type="text" id="Domicilio" name="Domicilio" placeholder="Ingresa tu dirección" required />
     <label for="Domicilio">Localidad:</label>
-    <input type="text" id="Domicilio" name="Domicilio" placeholder="Ingresa tu localidad" />
+    <input type="text" id="Localidad" name="Localidad" placeholder="Ingresa tu localidad" />
     <label for="Email">Correo electronico:</label>
     <input type="email" name="Email" id="email" placeholder="Email">
+    <input type="password" name="password" />
     <label for="motivo">¿Por qué motivo quieres adoptar?</label>
     <textarea id="motivo" name="motivo" rows="5" placeholder="Contanos por qué querés adoptar"></textarea>
 
@@ -62,15 +71,14 @@
         se descarta,no se regala,no se maltrata y no se abandona.
       </p>
     </div>
-    <form>
-      <button class="boton-enviar" type="submit">Volver</button>
+      <button class="boton-enviar" type="button"onclick="window.history.back();">Volver</button>
       <button class="boton-enviar" type="submit">Enviar</button>
     </form>
   </main>
   <!-- Pie de página -->
   <%- include ('../partials/footer') %>
   <!-- Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+  <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
@@ -78,7 +86,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
 </body>
 
 </html>
