--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -13,8 +13,8 @@
     rel="stylesheet" />
   <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
-   <!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous">
+  <!-- Bootstrap CSS -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous"> -->
 </head>
 
 <body class="container">
@@ -30,7 +30,7 @@
     <div form="formulario">
       <label for="Email">Email:</label><br>
       <input type="email" name="email" id="email" placeholder="Email"><br>
-      <label for="password">Contraseña</label><br>
+      <input type="password" name="password">Contraseña><br>
       <input class="formulario-input" type="password" name="password" placeholder="Contraseña"><br>
     </div>
     <form action="/users/login" method="POST"> <!-- Agregado action y method -->
