--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -14,8 +14,8 @@
   <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous" />
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous" /> -->
 </head>
 
 <body class="container">
@@ -25,7 +25,7 @@
     <div class="formulario">
       <h1>¡Bienvenido@ a la familia!</h1>
       <p>Para finalizar la adopción, por favor completa el siguiente formulario</p>
-      <form>
+      <form action="/users/register" method="POST" enctype="multipart/form-data">
         <div class="registro">
           <label for="username">Nombre:</label>
           <input type="text" name="nombre" placeholder="Ingresa tu nombre" required />
