--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -23,6 +23,7 @@
 
 /* Estilos para los inputs */
 input[type="text"],
+input[type="password"],
 input[type="number"],
 input[type="email"],
 select {
