--- a/src/views/users/login.ejs
+++ b/src/views/users/login.ejs
@@ -14,41 +14,47 @@
   <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
   <link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon">
   <!-- Bootstrap CSS -->
-<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous"> -->
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+Knujsl5/1hb7xNFiFyY3F6QkrSlp7vFYLXjheRD1Az/n8J" crossorigin="anonymous"> -->
 </head>
 
 <body class="container">
   <%- include('../partials/header') %>
 
-  
-  <main>
-    <div class="titulo-container">
-      <h1>¡Que bueno verte por acá!</h1>
-      <p>Inicia sesión para acceder a tu perfil, ver tus fotos y descubrir nuevas formas de cuidar a tu mascota.</p>
-  </div>
-  <div class="caja-formulario">
-    <div form="formulario">
-      <label for="Email">Email:</label><br>
-      <input type="email" name="email" id="email" placeholder="Email"><br>
-      <input type="password" name="password">Contraseña><br>
-      <input class="formulario-input" type="password" name="password" placeholder="Contraseña"><br>
-    </div>
-    <form action="/users/login" method="POST"> <!-- Agregado action y method -->
-      <button class="boton-enviar" type="submit">Iniciar sesión</button>
-    </form>
-  </div>
-    
-    <div class="olvido-contrasena">
-      ¿Olvidaste tu contraseña? <button class="click">Click acá</button>
-  </div>
-  </main>
 
-  <%- include('../partials/footer') %>
+    <main>
+      <div class="titulo-container">
+        <h1>¡Que bueno verte por acá!</h1>
+        <p>Inicia sesión para acceder a tu perfil, ver tus fotos y descubrir nuevas formas de cuidar a tu mascota.</p>
+      </div>
+      <div class="caja-formulario">
+        <form action="/users/login" method="POST"> <!-- Agregado action y method -->
+          <div form="formulario">
+            <label for="Email">Email:</label>
+            <input type="email" name="email" id="email" placeholder="Email">
+            <label for="Email">Contraseña:</label>
+            <input class="formulario-input" type="password" name="password" placeholder="Contraseña"><br>
+          </div>
+          <button class="boton-enviar" type="submit">Iniciar sesión</button>
+        </form>
+      </div>
 
-<!-- Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+      <div class="olvido-contrasena">
+        ¿Olvidaste tu contraseña? <button class="click">Click acá</button>
+      </div>
+    </main>
+
+    <%- include('../partials/footer') %>
+
+      <!-- Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
