--- a/src/views/animals/adoption.ejs
+++ b/src/views/animals/adoption.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Animales</title>
-</head>
+    <%- include('../partials/head') %>
+
 <body>
+    <%- include('../partials/header') %>
+
     <h1>Lista de Animales</h1>
     <ul>
         <% animals.forEach(animal => { %>
