--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -12,6 +12,6 @@
     <script src="https://kit.fontawesome.com/4d235eb227.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1FkwK04lK/TfRSa" crossorigin="anonymous" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1FkwK04lK/TfRSa" crossorigin="anonymous" />
   </head>
