--- a/src/views/animals/preAdopt.ejs
+++ b/src/views/animals/preAdopt.ejs
@@ -15,7 +15,7 @@
   <!-- Formulario de pre-adopción -->
   <main class="formulario">
     <h2>¡Formulario pre-adopción!</h2>
-    <form action="/animals/preAdopt" method="POST">
+    <form action="/animals/preAdopt/adoptDetail" method="POST">
     <label for="personaje">¿A quién te gustaría adoptar?</label>
     <select id="personaje" name="personaje">
       <option value="Aragorn">Aragorn</option>
